--- a/UGA/aboutme.html
+++ b/UGA/aboutme.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="aboutme.css">
     <title> hello world</title>
 </head>
+
 <body>
     <ul>
         <li><a href="index.html">Home</a></li>
@@ -15,6 +17,13 @@
         <li><a href="purpose.html">Purpose</a></li>
     </ul>
 
-    
+
 </body>
+    <h1>
+        My name is Zach White. I am 14 years old and a rising ninth grader.
+    </h1>
+    <h2>
+        I was born in Georgia and have lived here since.
+    </h2>
+
 </html>
