--- a/UGA/index.html
+++ b/UGA/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,22 +8,25 @@
     <link rel="stylesheet" href="style.css">
     <title> hello world</title>
 </head>
+
 <body>
     <ul>
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="aboutme.html">About Me</a></li>
         <li><a href="funfacts.html">Fun Facts</a></li>
         <li><a href="purpose.html">Purpose</a></li>
-    </ul> 
+        <li><a href="snake.html">Snake</a></li>
+    </ul>
     <button onclick="myFunction()">Try it</button>
     <script>
         function myFunction() {
-  alert("Hello! I am an alert box!");
-}
+            alert("Hello! I am an alert box!");
+        }
     </script>
 
     <h1>
-      This is my website
+        This is my website
     </h1>
 </body>
+
 </html>
