--- a/UGA/aboutme.html
+++ b/UGA/aboutme.html
@@ -15,15 +15,17 @@
         <li><a class="active" href="aboutme.html">About Me</a></li>
         <li><a href="funfacts.html">Fun Facts</a></li>
         <li><a href="purpose.html">Purpose</a></li>
+        <li><a href="snake.html">Snake</a></li>
     </ul>
 
-
-</body>
     <h1>
         My name is Zach White. I am 14 years old and a rising ninth grader.
     </h1>
     <h2>
         I was born in Georgia and have lived here since.
+        
     </h2>
+
+</body>
 
 </html>
