--- a/UGA/purpose.html
+++ b/UGA/purpose.html
@@ -15,11 +15,11 @@
         <li><a href="aboutme.html">About Me</a></li>
         <li><a href="funfacts.html">Fun Facts</a></li>
         <li><a class="active" href="purpose.html">Purpose</a></li>
+        <li><a href="snake.html">Snake</a></li>
     </ul>
-    </script>
 
     <h1>
-        
+
     </h1>
 
 </body>
