--- a/UGA/funfacts.html
+++ b/UGA/funfacts.html
@@ -15,6 +15,7 @@
         <li><a href="aboutme.html">About Me</a></li>
         <li><a class="active" href="funfacts.html">Fun Facts</a></li>
         <li><a href="purpose.html">Purpose</a></li>
+        <li><a href="snake.html">Snake</a></li>
     </ul>
 
 
