--- a/UGA/index.html
+++ b/UGA/index.html
@@ -15,18 +15,17 @@
         <li><a href="aboutme.html">About Me</a></li>
         <li><a href="funfacts.html">Fun Facts</a></li>
         <li><a href="purpose.html">Purpose</a></li>
-        <li><a href="snake.html">Snake</a></li>
     </ul>
-    <button onclick="myFunction()">Try it</button>
-    <script>
-        function myFunction() {
-            alert("Hello! I am an alert box!");
-        }
-    </script>
 
     <h1>
         This is my website
     </h1>
+    <h2>
+        This is the home page
+    </h2>
+    <h3>
+        You can use the use the navigation bar to open the About Me, Fun Facts, and Purpose pages
+    </h3>
 </body>
 
 </html>
