--- a/UGA/purpose.html
+++ b/UGA/purpose.html
@@ -13,12 +13,11 @@
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="aboutme.html">About Me</a></li>
-        <li><a href="funfacts.html">Fun Facts</a></li>
         <li><a class="active" href="purpose.html">Purpose</a></li>
     </ul>
 
     <h1>
-
+        I made this website because i wanted to see what I learned from this camp and use it later in life.
     </h1>
 
 </body>
