--- a/UGA/funfacts.html
+++ b/UGA/funfacts.html
@@ -16,7 +16,7 @@
         <li><a class="active" href="funfacts.html">Fun Facts</a></li>
         <li><a href="purpose.html">Purpose</a></li>
     </ul>
-
+    <img id="img1" src="https://images-na.ssl-images-amazon.com/images/I/81wFMY9OAFL.jpg" width="500px" height="600px">
 
 </body>
 
